# task-api

./: .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml  test.db
alembic/: env.py
alembic/versions/: 0f2b9e10d85b_add_users_table.py  cc55e532d0dd_initial_schema_with_auth_and_tasks.py  d1403ef5f1ce_create_tasks_table.py  db80359ccad3_add_users_table.py
app/: auth.py  cache.py  config.py  database.py  deps.py  exceptions.py  main.py  models.py  schemas.py  worker.py
app/routers/: admin.py  auth.py  tasks.py
tests/: conftest.py  test_tasks.py
